{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 248,
  "lineage": "a95777d8-6eb8-acbe-b4a2-524bf3b4e339",
  "resources": [
    {
      "module": "module.mongodb_comp",
      "mode": "data",
      "type": "aws_security_group",
      "name": "internal_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0cd3e63e2c8c17dbc",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "internal_sg"
                ]
              }
            ],
            "id": "sg-0cd3e63e2c8c17dbc",
            "name": "internal_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.vpc_lookups",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.mongo.module.vpc_lookups",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.vpc_lookups",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.jumphost.module.vpc_lookups",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.mongo",
      "mode": "data",
      "type": "aws_security_group",
      "name": "tier_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.jumphost",
      "mode": "data",
      "type": "aws_security_group",
      "name": "tier_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-05b5ce8e0211d48b2",
            "description": "jumphost_sg",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "tier1_sg"
                ]
              }
            ],
            "id": "sg-05b5ce8e0211d48b2",
            "name": "tier1_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.mongo",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0881ee7e0049e3778",
            "description": "Allows all access to jumphost",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "vpc_sg"
                ]
              }
            ],
            "id": "sg-0881ee7e0049e3778",
            "name": "vpc_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.jumphost",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0881ee7e0049e3778",
            "description": "Allows all access to jumphost",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "vpc_sg"
                ]
              }
            ],
            "id": "sg-0881ee7e0049e3778",
            "name": "vpc_sg",
            "tags": {},
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.vpc_lookups",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-0f44497792ab950c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.19.0.0/20",
            "default_for_az": false,
            "filter": [
              {
                "name": "cidrBlock",
                "values": [
                  "172.19.0.0/20"
                ]
              }
            ],
            "id": "subnet-0f44497792ab950c7",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.mongo.module.vpc_lookups",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-0f44497792ab950c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.19.0.0/20",
            "default_for_az": false,
            "filter": [
              {
                "name": "cidrBlock",
                "values": [
                  "172.19.0.0/20"
                ]
              }
            ],
            "id": "subnet-0f44497792ab950c7",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.vpc_lookups",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-0f44497792ab950c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.19.0.0/20",
            "default_for_az": false,
            "filter": [
              {
                "name": "cidrBlock",
                "values": [
                  "172.19.0.0/20"
                ]
              }
            ],
            "id": "subnet-0f44497792ab950c7",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.jumphost.module.vpc_lookups",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:subnet/subnet-0f44497792ab950c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.19.0.0/20",
            "default_for_az": false,
            "filter": [
              {
                "name": "cidrBlock",
                "values": [
                  "172.19.0.0/20"
                ]
              }
            ],
            "id": "subnet-0f44497792ab950c7",
            "map_public_ip_on_launch": false,
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.vpc_lookups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.mongo.module.vpc_lookups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.vpc_lookups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.jumphost.module.vpc_lookups",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:vpc/vpc-00ef7cdb3b35365a8",
            "cidr_block": "172.19.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f0a27c80d6f88edb",
                "cidr_block": "172.19.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-4bf75920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "172.19.0.0/16"
                ]
              }
            ],
            "id": "vpc-00ef7cdb3b35365a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511dfb6af759ae58",
            "owner_id": "600018317388",
            "state": "available",
            "tags": {
              "Name": "common_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.mongo.module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0429f7297df8b9275",
            "domain": "vpc",
            "id": "eipalloc-01ca70280c5d94699",
            "instance": "i-0fb23fb7d16e156b5",
            "network_interface": "eni-0514163796beabbda",
            "private_dns": "ip-172-19-11-126.us-east-2.compute.internal",
            "private_ip": "172.19.11.126",
            "public_dns": "ec2-3-132-193-186.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.193.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.mongodb_comp.module.mongo.module.ec2.aws_instance.instance",
            "module.mongodb_comp.module.mongo.module.ec2.aws_network_interface.eni"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f8dc8b25cee88117",
            "domain": "vpc",
            "id": "eipalloc-0490e829866c48586",
            "instance": "i-0dab7d4d2d57a0980",
            "network_interface": "eni-0da2f818c4b923e72",
            "private_dns": "ip-172-19-14-156.us-east-2.compute.internal",
            "private_ip": "172.19.14.156",
            "public_dns": "ec2-3-23-18-108.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.18.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.mongodb_comp.module.mongo.module.ec2.aws_instance.instance",
            "module.mongodb_comp.module.mongo.module.ec2.aws_network_interface.eni"
          ]
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.jumphost.module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04b1447886a0985ec",
            "domain": "vpc",
            "id": "eipalloc-05c493bd622be1588",
            "instance": "i-03dc4184c5884f794",
            "network_interface": "eni-024ef5351d593fb41",
            "private_dns": "ip-172-19-0-18.us-east-2.compute.internal",
            "private_ip": "172.19.0.18",
            "public_dns": "ec2-3-23-28-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.28.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.jumphost_comp.aws_security_group.external_sg",
            "module.jumphost_comp.module.jumphost.module.ec2.aws_instance.instance",
            "module.jumphost_comp.module.jumphost.module.ec2.aws_network_interface.eni"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.mongo.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:600018317388:instance/i-0fb23fb7d16e156b5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb23fb7d16e156b5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0514163796beabbda"
              }
            ],
            "primary_network_interface_id": "eni-0514163796beabbda",
            "private_dns": "ip-172-19-11-126.us-east-2.compute.internal",
            "private_ip": "172.19.11.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05e8c4d7c9fe4c6ad",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44497792ab950c7",
            "tags": {
              "Name": "mongodb00-wf1",
              "component": "jumphost",
              "env_subtype": "dev",
              "role": "mongodb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b5ce8e0211d48b2",
              "sg-0881ee7e0049e3778",
              "sg-0965d019c7cfb7b51",
              "sg-0cd3e63e2c8c17dbc"
            ]
          },
          "dependencies": [
            "module.mongodb_comp.module.mongo.module.ec2.aws_network_interface.eni"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:600018317388:instance/i-0dab7d4d2d57a0980",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dab7d4d2d57a0980",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0da2f818c4b923e72"
              }
            ],
            "primary_network_interface_id": "eni-0da2f818c4b923e72",
            "private_dns": "ip-172-19-14-156.us-east-2.compute.internal",
            "private_ip": "172.19.14.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-004ad6cd03dd47a99",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44497792ab950c7",
            "tags": {
              "Name": "mongodb01-wf1",
              "component": "jumphost",
              "env_subtype": "dev",
              "role": "mongodb"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b5ce8e0211d48b2",
              "sg-0881ee7e0049e3778",
              "sg-0965d019c7cfb7b51",
              "sg-0cd3e63e2c8c17dbc"
            ]
          },
          "dependencies": [
            "module.mongodb_comp.module.mongo.module.ec2.aws_network_interface.eni"
          ]
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.jumphost.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7919c33c90f5b58",
            "arn": "arn:aws:ec2:us-east-2:600018317388:instance/i-03dc4184c5884f794",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03dc4184c5884f794",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-024ef5351d593fb41"
              }
            ],
            "primary_network_interface_id": "eni-024ef5351d593fb41",
            "private_dns": "ip-172-19-0-18.us-east-2.compute.internal",
            "private_ip": "172.19.0.18",
            "public_dns": "ec2-3-23-28-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.28.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-042b10422bd04acbd",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44497792ab950c7",
            "tags": {
              "Name": "jumphost00-wf1",
              "component": "jumphost",
              "env_subtype": "dev",
              "role": "jumphost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0276f61eb62f52cbf",
              "sg-05b5ce8e0211d48b2",
              "sg-0881ee7e0049e3778"
            ]
          },
          "dependencies": [
            "module.jumphost_comp.aws_security_group.external_sg",
            "module.jumphost_comp.module.jumphost.module.ec2.aws_network_interface.eni"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_comp.module.mongo.module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0f7b9d3e7e7e9eb07",
                "device_index": 0,
                "instance": "i-0762a766f7f2ccfaa"
              }
            ],
            "id": "eni-0514163796beabbda",
            "mac_address": "06:4e:95:23:c1:e8",
            "private_dns_name": "ip-172-19-11-126.us-east-2.compute.internal",
            "private_ip": "172.19.11.126",
            "private_ips": [
              "172.19.11.126"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05b5ce8e0211d48b2",
              "sg-0881ee7e0049e3778",
              "sg-0965d019c7cfb7b51",
              "sg-0cd3e63e2c8c17dbc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44497792ab950c7",
            "tags": {
              "_ReservedDnsName": "mongodb00-wf1"
            }
          },
          "dependencies": [
            "module.mongodb_comp.aws_security_group.mongodb_external_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0315bfb5a76aea6cb",
                "device_index": 0,
                "instance": "i-0db576f37094bb7ae"
              }
            ],
            "id": "eni-0da2f818c4b923e72",
            "mac_address": "06:fb:1f:ee:05:d6",
            "private_dns_name": "ip-172-19-14-156.us-east-2.compute.internal",
            "private_ip": "172.19.14.156",
            "private_ips": [
              "172.19.14.156"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05b5ce8e0211d48b2",
              "sg-0881ee7e0049e3778",
              "sg-0965d019c7cfb7b51",
              "sg-0cd3e63e2c8c17dbc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44497792ab950c7",
            "tags": {
              "_ReservedDnsName": "mongodb01-wf1"
            }
          },
          "dependencies": [
            "module.mongodb_comp.aws_security_group.mongodb_external_sg"
          ]
        }
      ]
    },
    {
      "module": "module.jumphost_comp.module.jumphost.module.ec2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-05bfa2ec306d8c23d",
                "device_index": 0,
                "instance": "i-03dc4184c5884f794"
              }
            ],
            "id": "eni-024ef5351d593fb41",
            "mac_address": "06:98:5e:3f:f7:24",
            "private_dns_name": "ip-172-19-0-18.us-east-2.compute.internal",
            "private_ip": "172.19.0.18",
            "private_ips": [
              "172.19.0.18"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0276f61eb62f52cbf",
              "sg-05b5ce8e0211d48b2",
              "sg-0881ee7e0049e3778"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44497792ab950c7",
            "tags": {
              "_ReservedDnsName": "jumphost00-wf1"
            }
          },
          "dependencies": [
            "module.jumphost_comp.aws_security_group.external_sg"
          ]
        }
      ]
    },
    {
      "module": "module.jumphost_comp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0276f61eb62f52cbf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0276f61eb62f52cbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2379
              }
            ],
            "name": "external_sg",
            "name_prefix": null,
            "owner_id": "600018317388",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.jumphost_comp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0cd3e63e2c8c17dbc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd3e63e2c8c17dbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "internal_sg",
            "name_prefix": null,
            "owner_id": "600018317388",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    },
    {
      "module": "module.mongodb_comp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb_external_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:600018317388:security-group/sg-0965d019c7cfb7b51",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0965d019c7cfb7b51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongodb_external_sg",
            "name_prefix": null,
            "owner_id": "600018317388",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00ef7cdb3b35365a8"
          }
        }
      ]
    }
  ]
}